--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -8,9 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "nuxt": "3.0.0-rc.13",
-    "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "@nuxtjs/tailwindcss": "^6.1.3",
+    "nuxt": "3.0.0"
   }
 }
